Added code to deal with spectrograms that are too short. Also changed the frequency range to (40, 8000)

--- a/01_Spectrum Generation/Generating Spectrums.ipynb
+++ b/01_Spectrum Generation/Generating Spectrums.ipynb
@@ -71,56 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2020-08-02T21:19:54.739Z"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000 800\n",
-      "800 200\n",
-      "Finished this class. Going to the next\n",
-      "429 343\n",
-      "343 86\n",
-      "Finished this class. Going to the next\n",
-      "10 8\n",
-      "8 2\n",
-      "Finished this class. Going to the next\n",
-      "1000 800\n",
-      "800 200\n",
-      "Finished this class. Going to the next\n",
-      "5 4\n",
-      "4 1\n",
-      "Finished this class. Going to the next\n",
-      "1000 800\n",
-      "800 200\n",
-      "Finished this class. Going to the next\n",
-      "1000 800\n",
-      "800 200\n",
-      "Finished this class. Going to the next\n",
-      "1000 800\n",
-      "800 200\n",
-      "Finished this class. Going to the next\n",
-      "7 5\n",
-      "5 2\n",
-      "Finished this class. Going to the next\n",
-      "374 299\n",
-      "299 75\n",
-      "Finished this class. Going to the next\n",
-      "1000 800\n",
-      "800 200\n",
-      "Finished this class. Going to the next\n",
-      "929 743\n",
-      "743 186\n",
-      "Finished this class. Going to the next\n",
-      "1000 800\n",
-      "800 200\n",
-      "Finished this class. Going to the next\n",
+      "Finished class s . Going to the next.\n",
+      "Finished class h . Going to the next.\n",
+      "Finished class b . Going to the next.\n",
       "Done Creating our ToDoList. I'll start computing now, hold on.\n",
       "All Done.\n"
      ]
@@ -130,14 +95,20 @@
     "ToDoList=[]\n",
     "SourceFoldersLabels = [f.path for f in os.scandir(SOURCE_DATA_ROOT) if f.is_dir()]\n",
     "for path in SourceFoldersLabels:\n",
+    "    #find the audio files at the path\n",
     "    FileList = np.array([f.path for f in os.scandir(path) if f.is_file() and (f.name.endswith(\".aif\") or f.name.endswith(\".flac\") or f.name.endswith(\".wav\") or f.name.endswith(\".m4a\") or f.name.endswith(\".mp3\"))])\n",
     "    Label = os.path.split(path)[-1]\n",
+    "    #print(\"label\", Label)\n",
+    "    \n",
+    "    #Make the output folder files if they don't exist already\n",
     "    OutFolderTrain = os.path.join(GENERATED_DATA_ROOT,Label,'train')\n",
     "    OutFolderTest = os.path.join(GENERATED_DATA_ROOT,Label,'test')\n",
     "    if not os.path.exists(OutFolderTrain):\n",
     "        os.makedirs(OutFolderTrain)\n",
     "    if not os.path.exists(OutFolderTest):\n",
     "        os.makedirs(OutFolderTest)\n",
+    "        \n",
+    "    #Shake up the file list and separate into train and test. Put them on ToDoList\n",
     "    np.random.shuffle(FileList)\n",
     "    trainCount =np.int(np.floor(0.8*FileList.shape[0]))\n",
     "    train_set = FileList[:trainCount]\n",
@@ -147,20 +118,30 @@
     "    for f in test_set:\n",
     "        ToDoList.append((os.path.abspath(f),os.path.abspath(OutFolderTest)))\n",
     "    print(\"Finished class\",Label,\". Going to the next.\")\n",
+    "\n",
+    "#print('ToDoList', ToDoList)\n",
+    "\n",
+    "## Not sure what's happening here. Presumably iterating through files and making spectrograms?\n",
+    "## Does a batch of 12 and then the next batch.\n",
     "Commands = [[sys.executable, \"../helperFunctions.py\",t[0],t[1]] for t in ToDoList]\n",
     "print(\"Done Creating our ToDoList. I'll start computing now, hold on.\")\n",
-    "tempArray=[]\n",
+    "\n",
+    "batch=[]\n",
     "for i in range(len(Commands)):\n",
-    "    tempArray.append(Commands[i])\n",
-    "    if(len(tempArray)>=12):  ## <= To optimize you can type in here how many CPU cores/threads you have \n",
-    "        procs = [Popen(j) for j in tempArray ]\n",
+    "    batch.append(Commands[i])\n",
+    "    #print ('Commands', i, Commands[i])\n",
+    "    if(len(batch)>=12):\n",
+    "        #print('len(batch)', len(batch)) ## <= To optimize you can type in here how many CPU cores/threads you have \n",
+    "        procs = [Popen(j) for j in batch]\n",
+    "        #print('procs', procs)\n",
     "        for p in procs:\n",
     "            p.wait()\n",
-    "        tempArray=[]\n",
+    "        batch=[]\n",
     "\n",
-    "procs = [ Popen(j) for j in tempArray ]\n",
+    "procs = [ Popen(j) for j in batch ]\n",
     "for p in procs:\n",
     "    p.communicate() \n",
+    "    \n",
     "print(\"All Done.\")"
    ]
   }
@@ -181,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
