--- a/03_Running/Inference.ipynb
+++ b/03_Running/Inference.ipynb
@@ -55,12 +55,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stopping!\n",
+      "Stopped and Done!\n"
+     ]
+    }
+   ],
    "source": [
     "RTA.RunTheSystem(FullOut,TargetTime=10,ModelPath=\"../models/CatDogResNet.pth\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -79,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
